Change index.html directory and resulting relative paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Landing Page</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
     <body>
         <div class="nav">
@@ -25,25 +25,25 @@
                 <p class="secondary-text">Welcome to BOFA! Bruin Origami For All is a club that desires to promote and spread the art of origami. Our goal is to teach people how to fold both individual origami and collective group origami, to spread the love of origami to the UCLA campus and beyond, and to bring joy to people through origami by partnering with organizations in our local community.</p>
                 <button>JOIN BOFA</button>
             </div>
-            <img class="main-image" src="../images/bruin-origami.png" alt="Bruin Origami For All banner">
+            <img class="main-image" src="static/images/bruin-origami.png" alt="Bruin Origami For All banner">
         </div>
         <div class="big-container-2">
             <div class="header">Our Projects.</div>
             <div class="card-container">
                 <div class="card">
-                    <img class="info-img" src="../images/fire-dragon-origami.jpg" alt="Origami fire dragon">
+                    <img class="info-img" src="static/images/fire-dragon-origami.jpg" alt="Origami fire dragon">
                     <p>Origami fire dragon by Jo Nakashima, folded with printer paper</p>
                 </div>
                 <div class="card">
-                    <img class="info-img" src="../images/hydrangea-origami.jpg" alt="Origami hydrangea">
+                    <img class="info-img" src="static/images/hydrangea-origami.jpg" alt="Origami hydrangea">
                     <p>Origami quadruple hydrangea by Shuzo Fujimoto (adapted), folded with printer paper</p>
                 </div> 
                 <div class="card">
-                    <img class="info-img" src="../images/love-birds-origami.jpg" alt="Origami love birds">
+                    <img class="info-img" src="static/images/love-birds-origami.jpg" alt="Origami love birds">
                     <p>Origami love birds by Francis Ow, folded with printer paper</p>
                 </div>
                 <div class="card">
-                    <img class="info-img" src="../images/spiral-tower-origami.jpg" alt="Origami spiral flower tower">
+                    <img class="info-img" src="static/images/spiral-tower-origami.jpg" alt="Origami spiral flower tower">
                     <p>Origami flower tower by Chris Palmer, folded with printer paper</p>
                 </div>
             </div>
