--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Landing Page</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/static/styles.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <div class="nav">
